--- a/src/components/CardSliderVertical/CardSliderVertical.module.css
+++ b/src/components/CardSliderVertical/CardSliderVertical.module.css
@@ -16,11 +16,11 @@
     color: rgb(85, 83, 116);
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     border-radius: 1rem;
-    height: 7vw;
-    width: 90%;
+    height: 100;
+    width: 80%;
     margin-top: 20px;
     justify-content: center;
-    padding: 5px;
+    padding: 6%;
     align-items: center;
     overflow: hidden;
     text-align: center;
@@ -37,9 +37,9 @@
         height: 20%;
     }
     .card{
-        height: 8em;
+        height: 100;
     }
-    .card p{
-        font-size: 4vw;
+    .card h3{
+        font-size: 350%;
     }
 }
