--- a/src/components/Experimental2/Experimental2.module.css
+++ b/src/components/Experimental2/Experimental2.module.css
@@ -64,7 +64,7 @@
     }
     .description{
         font-size: 105%;
-        overflow:visible;
+        overflow:scroll;
         margin: 0;
         margin-top: -20px;
         font-weight: 200 !important;
