--- a/src/components/mottoCard/MottoCard.module.css
+++ b/src/components/mottoCard/MottoCard.module.css
@@ -2,13 +2,14 @@
     height: 15vh;
     width: 40%;
     display: flex;
-    justify-self: center;
     padding: 0.5rem;
     border-radius: 0.5rem;
     justify-content: center;
     font-family: sans-serif;
     align-items: center;
     background: linear-gradient(120deg,rgba(255, 234, 0, 0.508), rgba(0, 191, 255, 0.552));
+    margin-left: 50%;
+    transform: translateX(-50%);
 }
 
 .MottoCard img{
@@ -18,16 +19,11 @@
 
 .MottoCard h1{
     color: rgb(45, 45, 45);
-}
-
-.MottoCard i{
-    margin-top: 2rem;
-}
+}   
 
 @media (max-width:648px){
     .MottoCard{
         width: 85%;
-        margin-top: -10%;
     }
     .MottoCard h1{
         font-size: 140%;
