--- a/src/components/CardSlider/CardSlider.module.css
+++ b/src/components/CardSlider/CardSlider.module.css
@@ -84,6 +84,10 @@
     transform: scale(0.9);
 }
 
+.btn{
+    cursor: pointer;
+}
+
 @media(max-width:648px){
     .cardSlider{
         margin: 0;
