--- a/src/components/CardSliderVertical/CardSliderVertical.module.css
+++ b/src/components/CardSliderVertical/CardSliderVertical.module.css
@@ -30,6 +30,10 @@
     font-size: 1.2vw;
 }
 
+.btn{
+    cursor: pointer;
+}
+
 @media (max-width:648px){
     .cardSliderVertical{
         width:85vw;
