--- a/src/pages/AdminPanel/AdminPanel.module.css
+++ b/src/pages/AdminPanel/AdminPanel.module.css
@@ -1,9 +1,87 @@
-.heading{
+.adminPanel>*{
+    caret-color: black !important;
+}
+
+.heading {
     color: rgb(0, 0, 65);
     font-family: sans-serif;
     text-align: center;
 }
-.contentWrap{
-    margin-bottom: 13em;
-    min-height: 55.9vh;
+
+.centre {
+    margin-left: 50%;
+    transform: translateX(-50%);
+    border-radius: 0.5rem;
+    background-color: rgb(147, 219, 255);
+}
+
+.iAmTired {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.iAmTired>* {
+    margin: 1rem;
+}
+
+.addNews {
+    padding: 2rem;
+    background-color: rgb(210, 220, 226);
+    border-radius: 0.5rem;
+}
+
+.addNews input {
+    padding: 0.5rem;
+}
+
+.btn{
+    margin-left: 50%;
+    transform: translateX(-50%);
+    margin-top: 0.5rem;
+    padding: 0.5rem;
+    font-weight: 900;
+    color: white;
+    background-color: rgb(83, 168, 214);
+    cursor: pointer;
+    font-size: 130%;
+}
+
+.addCard{
+    height: 30vh;
+    width: 20%;
+    border-radius: 0.7rem;
+    background-color: rgb(215, 223, 231);
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+    font-weight: 800;
+    font-family: sans-serif;
+}
+
+.addCard >*{
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.addCard{
+    color: rgb(106, 106, 106);
+}
+
+.addCard .icon{
+    font-size: 500%;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    cursor: pointer;
+}
+
+.addCard input{
+    padding: 0.3rem;
+}
+
+@media(max-width:648px){
+    .addCard{
+        width: 80%;
+    }
 }
