--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,9 +1,11 @@
+
+
 .footer{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(rgb(10,10,10,0.55), rgba(10, 10, 10, 0.142)), url("https://i.ibb.co/rp4yL0d/13.jpg");
+    background: linear-gradient(rgb(10,10,10,0.55), rgba(10, 10, 10, 0.375)), url("https://i.ibb.co/rp4yL0d/13.jpg");
     background-size: contain;
     background-repeat: no-repeat;
     background-size: 120%;
@@ -11,7 +13,7 @@
     color: white;
     font-family: sans-serif;
     width: 100;
-    height: 13em;
+    height: 16em;
     width: 100%;
 }
 
@@ -24,8 +26,8 @@
 }
 .map{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: start;
     flex-direction: column; 
     margin-left: 10%;
     cursor: pointer;
@@ -62,6 +64,18 @@ h4{
     color: rgb(64, 152, 219)
 }
 
+.contentWrap{
+    display: flex;
+    flex-direction: row;
+}
+
+.contactInfo{
+    display: flex;
+    width: 80%;
+    justify-content: center;
+    align-items: center;
+}
+
 @media (max-width: 648px){
     .footer{
         height: 23vh;
@@ -76,10 +90,16 @@ h4{
         font-size: 3vw;
     }
     h3{
-        font-size: 3vw;
+        font-size: 3.5vw;
+        padding-bottom: 2px;
+
     }
     .disclaimer{
         font-size: 3vw;
         cursor: pointer;
     }
+    .contactInfo{
+        flex-direction: column;
+    }
 }
+
