--- a/src/components/TopNav/TopNav.module.css
+++ b/src/components/TopNav/TopNav.module.css
@@ -5,7 +5,7 @@
     background-color: rgb(46, 93, 158);
     color: white;
     display: flex;
-    justify-content:end;
+    justify-content:space-between;
     align-items: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow: hidden;
@@ -35,6 +35,41 @@
 
 }
 
+.socialInfo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contactInfo{
+    height: 95%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-left: 120px; /*view count se bachne ke liye*/
+}
+.contactInfo >*{
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.contactInfo h3{
+    background: transparent;
+    background-color: transparent;
+    font-size: 95%;
+}
+
+.alink{
+    background-color: transparent;
+    color: white;
+}
+
+.alink:hover{
+    background-color: aliceblue;
+    color: rgb(41, 128, 195);
+}
+
+
 @media(max-width: 648px) {
     .topNav{
         height: 1.6em;
@@ -48,5 +83,14 @@
     .viewCount{
         left: 20%;
     }
+    .contactInfo{
+        display: none;
+    }
 
+}
+
+@media(max-width: 960px){
+    .contactInfo h3{
+        font-size: 80%;
+    }
 }
